--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
-    - assets/covid_text.png
+    - assets/covid_black.png
+    - assets/covid_white.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
