--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_app
-description: A new Flutter application.
+description: Covid-19 Tracker.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -27,7 +27,6 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   http: ^0.12.1
-  dio: ^3.0.9
   flutter_svg: ^0.17.4
   fl_chart: ^0.9.3
   url_launcher: ^5.5.0
@@ -36,7 +35,6 @@ dependencies:
   flutter_spinkit: ^4.1.2
   flutter_webview_plugin: ^0.3.10+1
   geolocator: ^5.3.0
-  html:
   pie_chart: ^3.1.1
   video_player: ^0.10.8+1
   animations: ^1.1.1
