--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   http: ^0.12.1
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.19.3
   fl_chart: ^0.9.3
   url_launcher: ^5.5.0
-  dynamic_theme: ^1.0.1
+  adaptive_theme: ^2.0.0
   charts_flutter: ^0.9.0
   flutter_spinkit: ^4.1.2
   flutter_webview_plugin: ^0.3.10+1
